migrate to android kmp library plugin

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,3 +10,6 @@ org.gradle.caching=true
 #Android
 android.nonTransitiveRClass=true
 android.useAndroidX=true
+
+mavenCentralUsername = lRknmz9m
+mavenCentralPassword = vjStisRlnZwrrkQx96zoohFOQ4NI6YGSPd0tKhFMEd5R
